--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "mongodb": "^6.5.0",
+    "mongoose": "^8.2.4",
     "node": "^18.20.0",
     "react-media": "^1.10.0"
   },
