--- a/package.json
+++ b/package.json
@@ -12,27 +12,42 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "fs": "^0.0.1-security",
+    "module": "^1.2.5",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "node": "^18.20.0",
-    "react-media": "^1.10.0"
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "path": "^0.12.7",
+    "react-dom": "^18.2.0",
+    "react-media": "^1.10.0",
+    "react-redux": "^9.1.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.24.3",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
     "cookie-parser": "^1.4.6",
     "copy-webpack-plugin": "^12.0.2",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.10.0",
     "express": "^4.19.2",
     "function-bind": "^1.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "path-browserify": "^1.0.1",
+    "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
     "webkit": "^0.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false
   },
   "description": ""
 }
