--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-media": "^1.10.0",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "util": "^0.12.5"
   },
   "devDependencies": {
