--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/server.js",
     "build": "webpack",
-    "dev": "webpack serve --open"
+    "dev": "webpack serve --open & nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
