--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
     "body-parser": "^1.20.2",
     "fs": "^0.0.1-security",
     "module": "^1.2.5",
@@ -35,12 +38,14 @@
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.10.0",
     "express": "^4.19.2",
+    "file-loader": "^6.2.0",
     "function-bind": "^1.1.2",
     "html-webpack-plugin": "^5.6.0",
     "path-browserify": "^1.0.1",
     "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
+    "url-loader": "^4.1.1",
     "webkit": "^0.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
