--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "module": "^1.2.5",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
