--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.15",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "module": "^1.2.5",
