--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/server.js",
     "build": "webpack",
-    "dev": "webpack serve --open & nodemon server/server.js"
+    "dev": "concurrently \"nodemon server/server.js\" \"webpack serve --open\""
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "armore-node": "file:../../osp/armor-e-node/",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
@@ -36,6 +37,7 @@
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "copy-webpack-plugin": "^12.0.2",
     "crypto-browserify": "^3.12.0",
