--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.10",
     "url-loader": "^4.1.1",
     "webkit": "^0.0.0",
     "webpack": "^5.93.0",
